// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RefusedUsersList > does not render refresh share button 1`] = `
<div>
  <section
    class="tw:mb-4"
  >
    <h3
      class="tw:text-xs tw:uppercase tw:tracking-wide tw:text-[var(--color-text-secondary)] tw:mb-2"
    >
      Declined
    </h3>
    <ul
      class="tw:flex tw:flex-col"
    >
      <li
        class="tw:flex tw:items-center tw:justify-between tw:gap-3 tw:py-2 tw:border-b tw:border-[var(--color-border)]"
        data-test-id="refused-user-id2"
      >
        <span
          class="tw:text-sm"
        >
          bar@example.com
        </span>
      </li>
    </ul>
  </section>
</div>
`;

exports[`RefusedUsersList > renders refresh share button 1`] = `
<div>
  <section
    class="tw:mb-4"
  >
    <h3
      class="tw:text-xs tw:uppercase tw:tracking-wide tw:text-[var(--color-text-secondary)] tw:mb-2"
    >
      Declined
    </h3>
    <ul
      class="tw:flex tw:flex-col"
    >
      <li
        class="tw:flex tw:items-center tw:justify-between tw:gap-3 tw:py-2 tw:border-b tw:border-[var(--color-border)]"
        data-test-id="refused-user-id2"
      >
        <span
          class="tw:text-sm tw:flex-1 tw:truncate"
        >
          bar@example.com
        </span>
        <button
          aria-label="Re-share"
          class="tw:rounded-full tw:transition-colors tw:duration-200 tw:ease-in-out tw:flex tw:items-center tw:justify-center tw:flex-shrink-0 tw:min-h-[44px] tw:min-w-[44px] tw:cursor-pointer tw:text-[var(--color-primary)] tw:hover:bg-[var(--color-primary-light)] tw:active:bg-[rgb(79_70_229_/_0.2)] tw:h-8 tw:w-8 tw:text-sm"
          data-test-id="refresh-share"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="14"
            role="img"
            style="display: inline-block; vertical-align: middle;"
            viewBox="0 0 512 512"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M386.3 160H336c-17.7 0-32 14.3-32 32s14.3 32 32 32H464c17.7 0 32-14.3 32-32V64c0-17.7-14.3-32-32-32s-32 14.3-32
      32v51.2L414.4 97.6c-87.5-87.5-229.3-87.5-316.8 0s-87.5 229.3 0 316.8s229.3 87.5 316.8 0c12.5-12.5 12.5-32.8
      0-45.3s-32.8-12.5-45.3 0c-62.5 62.5-163.8 62.5-226.3 0s-62.5-163.8 0-226.3s163.8-62.5 226.3 0L386.3 160z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </section>
</div>
`;
